# spacetime_tiled

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  PUBLISH.md  README.md  SETUP_SUMMARY.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
examples/: README.md
examples/simple_game/: .gitignore  README.md
examples/simple_game/assets/: demo_map.tmx
examples/simple_game/bevy_client/: Cargo.toml  README.md
examples/simple_game/bevy_client/src/: components.rs  connection.rs  main.rs  map_renderer.rs  object_renderer.rs
examples/simple_game/bevy_client/src/module_bindings/: check_walkable_reducer.rs  find_spawns_reducer.rs  get_layer_objects_reducer.rs  get_map_info_reducer.rs  list_layers_reducer.rs  load_additional_map_reducer.rs  load_demo_map_reducer.rs  mod.rs  query_tile_reducer.rs  tiled_layer_table.rs  tiled_layer_type.rs  tiled_map_table.rs  tiled_map_type.rs  tiled_object_table.rs  tiled_object_type.rs  tiled_property_table.rs  tiled_property_type.rs  tiled_tile_table.rs  tiled_tile_type.rs  tiled_tileset_table.rs  tiled_tileset_type.rs
examples/simple_game/client/: Cargo.toml
examples/simple_game/client/src/: main.rs
examples/simple_game/server/: Cargo.toml
examples/simple_game/server/src/: lib.rs
src/: lib.rs
